<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tyynenmerenkatu_11_helsinki_finland">Tyynenmerenkatu 11, Helsinki, Finland</string>
    <string name="verkkokauppa_com">Verkkokauppa.com</string>
    <string name="_010_309_5555_0_084_min">010 309 5555 (0,084 € / min)</string>
    <string name="asiakaspalvelu_verkkokauppa_com">asiakaspalvelu@verkkokauppa.com</string>
    <string name="mon_tues">Mon - Tues:</string>
    <string name="wed_sat">Wed - Sat:</string>
    <string name="sun">Sun:</string>
    <string name="_12_15">12–15</string>
    <string name="_11_19">11–19</string>
    <string name="_9_21">9–21</string>
    <string name="contact_information">Contact Information:</string>

    // Images
    <string name="open">Image</string>
    <string name="location">Image</string>
    <string name="mail">Image</string>
    <string name="phone">Image</string>
    <string name="name">Image</string>
    <string name="front">Image</string>
</resources>
