    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <ImageView
        android:contentDescription="@string/front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/front"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/front" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_information"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingTop="400dp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/verkkokauppa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verkkokauppa_com"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_toRightOf="@id/name"
        android:paddingTop="3dp"
        android:paddingLeft="11dp"
        android:layout_below="@id/front"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tyynenmerenkatu_11_helsinki_finland"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_toRightOf="@id/name"
        android:paddingLeft="11dp"
        android:paddingTop="7dp"
        android:layout_below="@id/verkkokauppa"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin"
        android:layout_toEndOf="@id/name" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_010_309_5555_0_084_min"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_toRightOf="@id/phone"
        android:paddingLeft="11dp"
        android:paddingTop="5dp"
        android:layout_below="@id/address"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asiakaspalvelu_verkkokauppa_com"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_toRightOf="@id/mail"
        android:paddingLeft="11dp"
        android:paddingTop="10dp"
        android:layout_below="@id/number"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/openhours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon_tues"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_toRightOf="@id/open"
        android:paddingLeft="11dp"
        android:paddingTop="11dp"
        android:layout_below="@id/mail"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/openhours2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed_sat"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:paddingLeft="87dp"
        android:paddingTop="11dp"
        android:layout_below="@id/openhours"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/openhours3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:paddingLeft="87dp"
        android:paddingTop="11dp"
        android:layout_below="@id/openhours2"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/openhours4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_15"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:paddingLeft="230dp"
        android:paddingTop="11dp"
        android:layout_below="@id/openhours2"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/openhours5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11_19"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:paddingLeft="230dp"
        android:paddingTop="11dp"
        android:layout_below="@id/openhours"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <TextView
        android:id="@+id/openhours6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9_21"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:paddingLeft="231dp"
        android:paddingTop="11dp"
        android:layout_below="@id/email"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin" />

    <ImageView
        android:contentDescription="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_alignParentLeft="true"
        android:paddingLeft="50dp"
        android:paddingTop="8dp"
        android:layout_below="@id/text"
        android:src="@drawable/ic_baseline_business_24" />

    <ImageView
        android:contentDescription="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_alignParentLeft="true"
        android:paddingLeft="50dp"
        android:paddingTop="30dp"
        android:layout_below="@id/location"
        android:src="@drawable/ic_baseline_local_phone_24" />

    <ImageView
        android:contentDescription="@string/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mail"
        android:layout_alignParentLeft="true"
        android:paddingLeft="50dp"
        android:paddingTop="14dp"
        android:layout_below="@id/phone"
        android:src="@drawable/ic_baseline_email_24" />

    <ImageView
        android:contentDescription="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:layout_alignParentLeft="true"
        android:paddingLeft="50dp"
        android:paddingTop="11dp"
        android:layout_below="@id/name"
        android:src="@drawable/ic_baseline_location_on_24" />

    <ImageView
        android:contentDescription="@string/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open"
        android:layout_alignParentLeft="true"
        android:paddingLeft="51dp"
        android:paddingTop="11dp"
        android:layout_below="@id/mail"
        android:src="@drawable/ic_baseline_sensor_door_24" />

</RelativeLayout>
    </ScrollView>